#56 API CRUD Категорий Добавил роут категорий и все необходимые данные
